# Wellspring

./: .drone.yml  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: mingw-w64-x86_64.cmake
.github/workflows/: ci.yml
include/: Wellspring.h  wellspring.h
lib/: json.h  stb_truetype.h
src/: Wellspring.c  wellspring.c
visualc/: Wellspring.sln  Wellspring.vcxproj
